# wiki-mempalace

./: .gitignore  AGENTS.md  Cargo.toml  DomainSchema.json  Progress.md  README.md  article.md  article2.md  bench-fixed.json  bench-report.json  bench-report.md  llm-config.example.toml
.cursor/plans/: schema_followup_t0_t1_32545079.plan.md
.github/: pull_request_template.md
.github/workflows/: ci-mempalace-e2e.yml  ci-mempalace-quick.yml  ci-quick.yml  longmemeval.yml
crates/rust-mempalace/: .gitignore  Cargo.toml  README.md  bench-random.md
crates/rust-mempalace/src/: db.rs  main.rs  mcp.rs  service.rs
crates/rust-mempalace/tests/: e2e_core.rs
crates/wiki-cli/: Cargo.toml
crates/wiki-cli/src/: banner.rs  consistency.rs  dashboard.rs  llm.rs  main.rs  mcp.rs  notion_client.rs  notion_index_backfill.rs  notion_source_projection.rs  notion_sync.rs  notion_writeback.rs  orphan_governance.rs  palace_init.rs  vault_audit.rs  vault_backfill.rs
crates/wiki-cli/tests/: automation_run_daily.rs  consistency.rs  crystallize_entry_type.rs  dashboard.rs  entry_type_flag.rs  metrics.rs  orphan_governance.rs  palace_init.rs  promote_page_recover_from_stale.rs  schema_validate.rs  suggest.rs  vault_audit.rs  vault_backfill.rs  vault_cli_commands.rs
crates/wiki-cli/tests/fixtures/: invalid_cycle.json  invalid_duplicate_entry_type.json  invalid_self_loop.json  schema_with_reverse_promotion.json  valid_schema.json
crates/wiki-core/: Cargo.toml
crates/wiki-core/src/: artifact.rs  audit.rs  collab.rs  crystallize.rs  events.rs  fix.rs  gap.rs  graph.rs  lib.rs  lifecycle.rs  llm_ingest_plan.rs  metrics.rs  model.rs  page.rs  page_contract.rs  privacy.rs  quality.rs  query.rs  retention.rs  schema.rs  scope_policy.rs  search.rs  search_ports.rs  strategy.rs  tags.rs
crates/wiki-core/tests/: schema_json.rs
crates/wiki-kernel/: Cargo.toml
crates/wiki-kernel/src/: auto_hooks.rs  engine.rs  fix.rs  gap.rs  hooks.rs  lib.rs  memory.rs  metrics.rs  page_contract.rs  search_ports.rs  strategy.rs  wiki_writer.rs
crates/wiki-mempalace-bridge/: Cargo.toml
crates/wiki-mempalace-bridge/src/: lib.rs  live_ranker.rs  live_search.rs  live_sink.rs  live_tools.rs  tools.rs
crates/wiki-mempalace-bridge/tests/: live_sink.rs
crates/wiki-migration-notion/: Cargo.toml
crates/wiki-migration-notion/src/: audit.rs  lib.rs  main.rs  model.rs  parser.rs  report.rs  resolver.rs  scanner.rs  writer.rs
crates/wiki-storage/: Cargo.toml
crates/wiki-storage/src/: lib.rs
docs/: LESSONS.md  README.md  architecture.md  automation-health-alerts.md  automation-implementation-plan.md  automation-issue-batch-1.md  automation-issue-batch-2.md  automation-issue-batch-3.md  dev-workflow.md  dogfood-readiness.md  longmemeval.md  mempalace-linkage.md  outbox-and-consumers.md  outbox-event-matrix.md  plan.md  recovery-drill-template.md  recovery-runbook.md  roadmap.md  schema-followup-plan.md  vault-standards.md
docs/archive/: README.md  automation-implementation-plan.md  automation-issue-batch-1.md  automation-issue-batch-2.md  dogfood-readiness.md  plan.md
docs/blog/: article2.md
docs/handovers/: README.md
docs/handovers/agent-runtime-defaults/: summary.md
docs/handovers/code-review-c15/: summary.md
docs/handovers/code-review-fixes/: all-modules.md
docs/handovers/db-vault-palace-consistency/: audit.md  plan-apply.md  source-links.md
docs/handovers/longmemeval-auto/: review.md  runner.md  workflow.md
docs/handovers/m12-strategy/: summary.md
docs/handovers/notion-incremental-sync/: implementation.md
docs/prd/: README.md  batch-3.md  code-review-fixes.md  db-vault-palace-consistency.md  notion-incremental-sync.md  notion-source-vault-projection.md  notion-sync-index-backfill.md  notion-sync-trusted-tag-policy.md  storage-embeddings-followup.md  vault-backfill-and-palace-init.md
docs/specs/: README.md
docs/templates/: README.md  module-handoff.md  prd.md  review-checklist.md  spec-design.md  spec-requirements.md  spec-tasks.md  subagent-task.md
scripts/: backup.sh  e2e.sh  longmemeval_fetch.sh  longmemeval_run.py  recovery-drill.sh
src/: classifier.rs  cli.rs  db.rs  lib.rs  llm.rs  main.rs  mcp.rs  service.rs
tests/: e2e_core.rs  longmemeval_runner_test.py
tests/fixtures/: ingest_llm_ok.json  longmemeval_tiny.json
(+67 files in other folders)
