[package]
name = "wiki-kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
wiki-core = { path = "../wiki-core" }
wiki-storage = { path = "../wiki-storage" }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
