[package]
name = "wiki-mempalace-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Adapter hooks for optional integration with rust-mempalace (local path)."

[features]
default = []
live = ["dep:rust-mempalace", "dep:rusqlite", "dep:sha2", "dep:chrono"]

[dependencies]
wiki-core = { path = "../wiki-core" }
thiserror = "2"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rust-mempalace = { path = "../../../rust-mempalace", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
sha2 = { version = "0.10", optional = true }
chrono = { version = "0.4", features = ["clock"], optional = true }

[dev-dependencies]
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4"] }
