[package]
name = "wiki-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wiki-core = { path = "../wiki-core" }

[dev-dependencies]
tempfile = "3"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4"] }
